--- a/style.css
+++ b/style.css
@@ -1,6 +1,73 @@
-.header{
- width:100%;
+ *{
+   padding: 0%;
+    margin: 0%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .main{
-background-color:black;
+    background-color: black;
+    width:100%;
+    height: auto ;
+ }
+ .header{
+    display: flex;
+    align-items: center;
+    
+ }
+ 
+ .header-logo{
+    color:white;
+    font-size:30px;
+ }
+ 
+  .dropdown{
+    position: relative;
+    display: inline-block;
+    left:60%;
+  }
+.Links{
+
+    color: white;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+}
+.dropdown-content{
+    display: none;
+    position: absolute;
+    background-color:transparent;
+    backdrop-filter: blur(10px);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px wheat;
+    z-index: 1;
+    right:2%;
+}
+.dropdown-content a {
+    color:white;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+
+}
+.dropdown-content a:hover {
+    background-color:gray;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.main-body{
+    padding-top:6%;
+}
+.main-text{
+    width:60%;
+}
+.main-cloud{
+    color: white;
+    font-size:200%;
+    font-weight: 600;
+    
+}
+.main-deployance{
+    color: white;
 }
